edit directions + remove unnecessary content

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -124,3 +124,34 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+.site-direction {
+  direction: rtl;
+}
+
+.float-button {
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.whatsapp-float {
+	margin-top:16px;
+}
+
+.mt1 {
+  margin-top: 1rem;
+}
+
+.pl-4 {
+  padding-left: 4rem!important;
+}
